--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,69 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
-/* body {
-    margin: 10px;
-} */
-
-header>h1 {
-    margin: 10px;
+header {
+    padding: 5px;
 }
 
-header>h2 {
-    margin: 10px;
-}
-
-nav {
-    background: #66b7c5;
-    height: 80px;
-    width: 100%;
+.page-title,
+.payoff {
+    margin: 5px;
 }
 
 .logo {
-    width: 150px;
+    margin: 5px;
+    width: 100px;
     height: 60px;
-    margin-top: 10px;
-    margin-left: 10px;
+}
+
+nav {
+    width: 100%;
+    height: 60px;
+    background-color: rgb(110, 233, 176);
 }
 
 nav ul {
     float: right;
-    margin-right: 20px;
 }
 
 nav ul li {
     display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    line-height: 60px;
+    margin-right: 20px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 600;
-    color: #444343;
+    color: white;
 }
 
 nav ul li a:hover {
-    color: #ffffff;
-    background-color: #326d77;
-    padding: 7px 13px;
+    background-color: gold;
+    padding: 5px;
     border-radius: 5px;
-    transition: 0.7s;
+    color: white;
+    transition: 0.8s;
 }
 
-.hamburgerBtn {
-    line-height: 97px;
-    float: right;
-    margin-right: 40px;
-    display: none;
-    cursor: pointer;
+.promo-movie {
+    margin: 10px;
 }
 
-#check {
-    display: none;
+.promo-movie video {
+    width: 100%;
+    height: auto;
 }
 
-@media (max-width: 798px) {
-    .logo {
-        width: 130px;
-        height: 50px;
-    }
+.articles {
+    margin: 10px;
+    width: 80%;
 }
 
-@media (max-width: 480px) {
-    .logo {
-        width: 130px;
-        height: 50px;
-        margin-top: 15px;
-        margin-left: 10px;
-    }
-
-    .hamburgerBtn {
-        display: block;
-    }
-
-    nav ul {
-        position: fixed;
-        width: 50%;
-        height: 100vh;
-        background-color: #aa2f60;
-        top: 80px;
-        right: -100%;
-        transition: .6s;
-        text-align: center;
-    }
-
-    nav ul li {
-        display: block;
-    }
-
-    nav ul li a {
-        font-size: 16px;
-        color: white;
-    }
-
-    #check:checked~ul {
-        right: 0;
-        margin-right: 0;
-    }
-
-}
-
-.articles section {
-    min-height: 200px;
+article h2 {
+    margin-top: 5px;
 }
 
 .articles p {
@@ -127,7 +76,7 @@ nav ul li a:hover {
     float: right;
     width: 260px;
     height: 130px;
-    margin: 0 0 0 15px;
+    margin: 9px 0 9px 9px;
     border-radius: 5px;
 }
 
@@ -145,27 +94,27 @@ article footer {
 
 .container {
     display: flex;
-    width: 100%;
-    height: auto;
+    flex-direction: column;
 }
 
-.articles {
-    margin: 10px;
+.row {
+    display: flex;
+    flex-direction: row;
 }
 
 aside {
-    padding: 10px;
+    width: 20%;
+    padding: 10px 20px;
     margin: 10px;
-    border-radius: 5px;
-    height: 230px;
-    width: 470px;
+    border-radius: 10px;
     background-color: lightgray;
     flex-shrink: 0;
     flex-grow: 0;
+    line-height: 20px;
 }
 
-aside li {
-    margin: 12px;
+aside h2 {
+    margin: 8px 0;
 }
 
 .cookie {
@@ -181,6 +130,128 @@ aside li {
     right: 0;
 }
 
+.footer {
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: #333;
+    color: #fff;
+    line-height: 40px;
+}
+
 footer p {
     margin: 10px;
 }
+
+@media (max-width: 798px) {
+    .row {
+        flex-direction: column-reverse;
+    }
+
+    aside {
+        width: 98%;
+        margin: 0 5px;
+    }
+
+    .articles {
+        max-width: 100%;
+        width: 98%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .articles p {
+        text-align: left;
+        font-size: 16px;
+        padding: 5px 0 5px;
+    }
+
+    .articles img {
+        float: left;
+        margin: 9px 9px 9px 0;
+    }
+}
+
+
+/* ===============Mobile=============== */
+
+.hamburgerBtn {
+    display: none;
+    float: right;
+    padding: 23px 10px 0 10px;
+    cursor: pointer;
+}
+
+#check {
+    display: none;
+}
+
+@media (max-width: 480px) {
+
+    .row {
+        flex-direction: column-reverse;
+    }
+
+    aside {
+        width: 98%;
+        margin: 0 5px;
+    }
+
+    .articles {
+        max-width: 100%;
+        width: 98%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .articles p {
+        text-align: justify;
+        font-size: 16px;
+        padding-right: 10px;
+    }
+
+    .articles img {
+        width: 97%;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    header {
+        position: absolute;
+        padding: 5px;
+    }
+
+    .hamburgerBtn {
+        display: block;
+    }
+
+    nav {
+        height: 70px;
+    }
+
+    ul {
+        display: none;
+        position: absolute;
+        top: 4.3rem;
+        right: -100%;
+        width: 50%;
+        background-color: #2db2ff;
+        padding-left: 5%;
+        transition: .6s;
+    }
+
+    nav ul li a {
+        font-size: 16px;
+        color: white;
+    }
+
+    #check:checked~ul {
+        right: 0;
+        display: inline-grid;
+    }
+}
+
+
+/* ===============Mobile=============== */
