--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ nav ul li a:hover {
     transition: 0.8s;
 }
 
+.active {
+    background-color: gold;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    transition: 0.8s;
+}
+
 .promo-movie {
     margin: 10px;
 }
@@ -92,7 +100,7 @@ article footer {
     margin-top: 5px;
 }
 
-.container {
+.column {
     display: flex;
     flex-direction: column;
 }
@@ -143,6 +151,8 @@ footer p {
     margin: 10px;
 }
 
+/* ===============Tab=============== */
+
 @media (max-width: 798px) {
     .row {
         flex-direction: column-reverse;
@@ -172,6 +182,7 @@ footer p {
     }
 }
 
+/* ===============Tab=============== */
 
 /* ===============Mobile=============== */
 
@@ -231,7 +242,7 @@ footer p {
         height: 70px;
     }
 
-    ul {
+    nav ul {
         display: none;
         position: absolute;
         top: 4.3rem;
@@ -239,7 +250,7 @@ footer p {
         width: 50%;
         background-color: #2db2ff;
         padding-left: 5%;
-        transition: .6s;
+        transition: 0.6s;
     }
 
     nav ul li a {
@@ -255,3 +266,108 @@ footer p {
 
 
 /* ===============Mobile=============== */
+
+/* ===============Contact Page Start=============== */
+
+#contact-form {
+    width: 70%;
+    margin: 10px;
+}
+
+#contact-form fieldset {    
+    padding: 15px;
+}
+
+#contact-form legend {    
+    font-weight: 900;
+    padding: 10px;
+    font-size: 18px;
+}
+
+#contact-form .column {
+    width: 98%;
+    margin: 10px;
+}
+
+#contact-form input, textarea, button {
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#contact-form button {
+    background-color: #FA0;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+#contact-form button:hover {
+    background-color: rgb(255, 202, 96);
+}
+
+#contact-form label {
+    margin-bottom: 5px;
+}
+
+#contact-page aside {
+    width: 30%;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    background-color: lightgray;
+    flex-shrink: 0;
+    flex-grow: 0;
+    line-height: 20px;
+}
+
+#contact-page * {
+    text-decoration: none;
+    list-style: none;
+}
+
+#contact-page aside img {
+    width: 100%;
+    margin: 5px 0;
+    border-radius: 10px;
+}
+
+/* ===============Contact Page - Tab=============== */
+
+@media (max-width: 798px) {
+    #contact-page .row {
+        flex-direction: column-reverse;
+    }
+
+    #contact-page aside {
+        width: 98%;
+    }
+
+    #contact-form {
+        width: 98%;
+    }
+}
+
+/* ===============Contact Page - Tab=============== */
+
+/* ===============Contact Page - Mobile=============== */
+
+@media (max-width: 480px) {
+
+    #contact-page .row {
+        flex-direction: column;
+    }
+
+    #contact-page aside {
+        width: 96%;
+    }
+
+    #contact-form {
+        width: 96%;
+    }
+}
+
+/* ===============Contact Page - Mobile=============== */
+
+/* ===============Contact Page End=============== */
