--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ td {
     #pricing-top-three {
         width: 97%;
     }
-    
+
     #pricing-top-three ul li:first-child {
         display: none;
     }
@@ -473,7 +473,7 @@ td {
     #pricing-top-three ul {
         display: flex;
     }
-    
+
     #pricing-top-three ul li {
         margin: 0 5px;
     }
@@ -504,7 +504,7 @@ td {
     #pricing-top-three ul {
         display: block;
     }
-    
+
     #pricing-top-three ul li {
         margin: 0 5px;
     }
@@ -513,3 +513,72 @@ td {
 /* ===============Pricing Page - Mobile=============== */
 
 /* ===============Pricing Page End=============== */
+
+/* ===============Product Page Start=============== */
+
+#article-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 10px;
+}
+
+#article-container article {
+    padding: 10px;
+    font-size: 15px;
+}
+
+#article-container article:nth-child(1) {
+    grid-row: 1 / 3;
+}
+
+#article-container article:nth-child(2) {
+    grid-row: 1 / 9;
+}
+
+#article-container article:nth-child(3) {
+    grid-row: 1 / 5;
+}
+
+#article-container article:nth-child(4) {
+    grid-row: 3 / 10
+}
+
+#article-container article:nth-child(5) {
+    grid-row: 5 / 9
+}
+
+#article-container article:nth-child(6) {
+    grid-column: 2 / 4;
+}
+
+#product-aside {
+    width: 100%;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    background-color: lightgray;
+    flex-shrink: 0;
+    flex-grow: 0;
+    line-height: 20px;
+}
+
+#product-aside ul {
+    display: flex;
+    gap: 10px;
+}
+
+#product-aside img {
+    width: 100%;
+    height: 95%;
+    margin: 5px 0;
+    border-radius: 10px;
+}
+
+/* ===============Product Page - Tab=============== */
+/* ===============Product Page - Tab=============== */
+
+/* ===============Product Page - Mobile=============== */
+/* ===============Product Page - Mobile=============== */
+
+/* ===============Product Page End=============== */
