--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,36 @@ nav ul li a:hover {
     transition: 0.8s;
 }
 
+aside h2 {
+    margin: 8px 0;
+}
+
+.cookie {
+    width: 200px;
+    padding: 15px;
+    margin: 10px;
+    background-color: #FA0;
+    color: #FFF;
+    opacity: 50%;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+
+.footer {
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: #333;
+    color: #fff;
+    line-height: 40px;
+}
+
+footer p {
+    margin: 10px;
+}
+
 /* ===============Common End=============== */
 
 /* ===============Index Page Start=============== */
@@ -72,7 +102,8 @@ nav ul li a:hover {
 
 .promo-movie video {
     width: 100%;
-    height: auto;
+    height: 22rem;
+    object-fit: cover;
 }
 
 .articles {
@@ -91,11 +122,14 @@ article h2 {
 }
 
 .articles img {
-    float: right;
     width: 260px;
     height: 130px;
     margin: 9px 0 9px 9px;
     border-radius: 5px;
+}
+
+.articles figure {
+    float: right;
 }
 
 .dot {
@@ -131,36 +165,6 @@ article footer {
     line-height: 20px;
 }
 
-aside h2 {
-    margin: 8px 0;
-}
-
-.cookie {
-    width: 200px;
-    padding: 15px;
-    margin: 10px;
-    background-color: #FA0;
-    color: #FFF;
-    opacity: 50%;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-}
-
-.footer {
-    display: block;
-    width: 100%;
-    height: 40px;
-    background-color: #333;
-    color: #fff;
-    line-height: 40px;
-}
-
-footer p {
-    margin: 10px;
-}
-
 /* ===============Index Page - Tab=============== */
 
 @media (max-width: 798px) {
@@ -187,8 +191,11 @@ footer p {
     }
 
     .articles img {
-        float: left;
         margin: 9px 9px 9px 0;
+    }
+
+    .articles figure {
+        float: left;
     }
 }
 
@@ -232,7 +239,13 @@ footer p {
     }
 
     .articles img {
-        width: 97%;
+        width: 100%;
+        height: 12rem;
+    }
+    
+    .articles figure {
+        width: 100%;
+        margin-bottom: 5px;
     }
 
     .logo {
