--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     list-style: none;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* ===============Reset End=============== */
 
 /* ===============Common Start=============== */
@@ -659,23 +663,25 @@ td {
     }
 
     #article-container article:nth-child(1) {
-        grid-row: 1 / 3;
+        grid-row: 4 / 4;
     }
-
+    
     #article-container article:nth-child(2) {
-        grid-row: 1 / 12;
+        grid-row: 5 / 5;
     }
 
     #article-container article:nth-child(3) {
-        grid-row: 3 / 36
+        grid-row: 3 / 3;
+        display: block;
     }
 
     #article-container article:nth-child(4) {
-        display: none;
+        grid-row: 1 / 3;
+        display: block;
     }
 
     #article-container article:nth-child(5) {
-        grid-row: 12 / span 24;
+        display: none;        
     }
 
     #article-container article:nth-child(6) {
