--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    list-style: none;
 }
 
 body {
@@ -195,6 +194,16 @@ article footer {
     flex-shrink: 0;
     flex-grow: 0;
     line-height: 20px;
+}
+
+.articles + aside ol {
+    padding-left: 15px;
+    padding-top: 5px;
+    line-height: 27px;
+}
+
+#upcoming-routes h2 {
+    font-size: 1em;
 }
 
 /* ===============Index Page - Tab=============== */
@@ -406,6 +415,10 @@ button {
     line-height: 20px;
 }
 
+#contact-page aside ul {
+    list-style: none;
+}
+
 #contact-info {
     margin: 10px;
 }
@@ -474,6 +487,10 @@ button {
     overflow: auto;
 }
 
+#pricing-table table tbody tr td:first-child {
+    color: #FF0;
+}
+
 #pricing-table table {
     margin: 10px;
     font-size: 13px;
@@ -510,7 +527,11 @@ td {
 }
 
 #pricing-table tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #CFF;
+}
+
+#pricing-table tbody tr:nth-child(odd) {
+    background-color: #FFF;
 }
 
 #pricing-top-three {
@@ -528,6 +549,10 @@ td {
     width: 100%;
     margin: 5px 0;
     border-radius: 10px;
+}
+
+#pricing-top-three ul {
+    list-style: none;
 }
 
 #source {
@@ -637,11 +662,11 @@ td {
 }
 
 #article-container article:nth-child(4) {
-    grid-row: 3 / 10
+    grid-row: 3 / 10;
 }
 
 #article-container article:nth-child(5) {
-    grid-row: 5 / 9
+    grid-row: 5 / 9;
 }
 
 #article-container article:nth-child(6) {
@@ -659,6 +684,7 @@ td {
 }
 
 #product-aside ul {
+    list-style: none;
     display: flex;
     gap: 10px;
 }
@@ -692,7 +718,7 @@ td {
     }
 
     #article-container article:nth-child(3) {
-        grid-row: 3 / 36
+        grid-row: 3 / 36;
     }
 
     #article-container article:nth-child(4) {
